# HemOnc_Alchemy

./: .env_sample  .gitignore  README.md  oa_system_config_sample.yaml  pyproject.cava_external.toml  pyproject.erica.toml  pyproject.public.toml  pyproject.toml
hemonc_alchemy/matchers/: spacy_config.py  spacy_patterns.jsonl
hemonc_alchemy/model/: hemonc_enums.py  hemonc_model.py
notebooks/: 01_import_hemonc_source.ipynb  03_example_usage.ipynb  04_example_clinical_episode_handling.ipynb  05_lung_regimen_rollout.ipynb
