[tool.poetry]
name = "hemonc-alchemy"
version = "0.1.0"
description = ""
authors = ["Georgie Kennedy <georgina.kennedy@unsw.edu.au>"]
readme = "README.md"
license = "CC-BY-NC-SA-4.0"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.2"
pandas = "^2.2.1"
SQLAlchemy = "^2.0.28"
duckdb = "^0.10.1"
omop-alchemy = {git = "https://github.com/AustralianCancerDataNetwork/OMOP_Alchemy"}
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
medspacy = "^1.2.0"
fastlite = "^0.0.1"
graphviz = "^0.20.3"
rdata = "^0.11.2"
pyreadr = "^0.5.0"
plotly = "^5.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
